--- a/package.json
+++ b/package.json
@@ -12,11 +12,21 @@
     "@agney/react-loading": "^0.1.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fullcalendar/core": "^6.1.14",
+    "@fullcalendar/daygrid": "^6.1.14",
+    "@fullcalendar/interaction": "^6.1.14",
+    "@fullcalendar/react": "^6.1.14",
+    "@fullcalendar/timegrid": "^6.1.14",
+    "@headlessui/react": "^2.1.0",
+    "@headlessui/tailwindcss": "^0.2.1",
+    "@heroicons/react": "^2.1.4",
     "@mui/material": "^5.15.18",
+    "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.17.3",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
@@ -25,6 +35,7 @@
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
